Add mileage to Vehicle

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
     year: "Year"
     make: "Make"
     model: "Model"
+    mileage: "Mileage"
     current: "Current"
     currently_owned: "Currently Owned"
     your_vehicles: "Your Vehicles"
