Implement deletion for Vehicles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
   "no": "No"
   "save": "Save"
   "edit": "Edit"
+  "delete": "Delete"
 
   vehicles:
     year: "Year"
@@ -31,3 +32,4 @@ en:
     current: "Current"
     currently_owned: "Currently Owned"
     your_vehicles: "Your Vehicles"
+    unable_to_delete: "We were unable to delete that vehicle"
