Add purchase_date and sale_date to Vehicles
- sale_date must be later than the purchase_date

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,3 +33,4 @@ en:
     currently_owned: "Currently Owned"
     your_vehicles: "Your Vehicles"
     unable_to_delete: "We were unable to delete that vehicle"
+    must_be_after_purchase_date: "must be after the Purchase Date"
